# nasrudin

./: .env.example  .gitignore  CLAUDE.md  README.md  derive_emc2.sh  docker-compose.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
deploy/: cron-refresh.sh  physics-generator.service
docs/: ARCHITECTURE.md  DATA-MODEL.md  FRONTEND.md  IMPLEMENTATION-PLAN.md  LEAN4-BRIDGE.md  LLM-INTEGRATION.md  PHYSICS-AXIOMS.md  PLAN.md
engine/: CRATES.md  Cargo.toml
engine/.claude/cache/agents/oracle/: output-axum-login-research-20260130.md
engine/.claude/cache/agents/scout/: output-1769788423.md
engine/crates/api/: Cargo.toml
engine/crates/api/src/: auth.rs  main.rs  rate_limit.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: dimension.rs  expr.rs  id.rs  lib.rs  theorem.rs
engine/crates/core/tests/: test_dimension.rs  test_expr.rs  test_id.rs  test_theorem.rs
engine/crates/derive/: Cargo.toml
engine/crates/derive/src/: axiom_store.rs  context.rs  derivation.rs  dimension_checker.rs  error.rs  lean_emitter.rs  lean_verify.rs  lib.rs  rewrite.rs  rules.rs  strategies.rs
engine/crates/derive/tests/: integration_lean_verify.rs  test_axiom_store.rs  test_derivation.rs  test_dimension_checker.rs  test_lean_emitter.rs  test_lean_export.rs  test_rewrite.rs
engine/crates/ga/: Cargo.toml
engine/crates/ga/src/: config.rs  crossover.rs  dedup.rs  engine.rs  fitness.rs  individual.rs  island.rs  lib.rs  mutation.rs  population.rs  selection.rs
engine/crates/importer/: Cargo.toml
engine/crates/importer/src/: catalog.rs  codegen.rs  lib.rs  loader.rs
engine/crates/lean-bridge/: Cargo.toml
engine/crates/lean-bridge/src/: export.rs  ffi.rs  lean_syntax.rs  lib.rs  process.rs  tactic.rs
engine/crates/mcp/: Cargo.toml
engine/crates/mcp/src/: lib.rs
engine/crates/pg/: Cargo.toml
engine/crates/pg/src/: lib.rs
engine/crates/pg/src/entity/: mod.rs  saved_searches.rs  sessions.rs  user_preferences.rs  users.rs  workers.rs
engine/crates/pg/src/migrator/: m20250101_000001_create_tables.rs
engine/crates/pg/src/query/: saved_searches.rs  sessions.rs  user_preferences.rs  users.rs  workers.rs
engine/crates/rocks/: Cargo.toml
engine/crates/rocks/src/: lib.rs
engine/physics_data/: IDENTITY  LOG  LOG.old.1769774037989267  OPTIONS-000019
nasrudin-frontend/: .cta.json  biome.json  package-lock.json  package.json  vite.config.ts
nasrudin-frontend/.claude/cache/agents/oracle/: output-2026-01-31-tanstack-start-serverfn.md
nasrudin-frontend/.claude/cache/agents/scout/: output-tanstack-audit-1769822529.md
nasrudin-frontend/src/: react-katex.d.ts  routeTree.gen.ts  router.tsx  styles.css
nasrudin-frontend/src/components/: DomainBadge.tsx  RateLimitToast.tsx  RouteError.tsx  TheoremCard.tsx  TopNav.tsx
nasrudin-frontend/src/lib/: api.ts  mock-data.ts  queries.ts  server-fns.ts  sse.ts  stores.ts  types.ts
nasrudin-frontend/src/routes/: __root.tsx  axioms.tsx  engine.tsx  index.tsx  search.tsx  timeline.tsx
nasrudin-frontend/src/routes/demo/: start.server-funcs.tsx  start.ssr.spa-mode.tsx
nasrudin-frontend/src/routes/domains/: $domain.tsx  index.tsx
nasrudin-frontend/src/routes/explore/: $theoremId.tsx
nasrudin-frontend/src/routes/theorem/: $theoremId.tsx
physlean-extract/: lake-manifest.json  lakefile.lean
physlean-extract/PhysLeanExtract/: DomainTagger.lean  JsonEmitter.lean  Main.lean  TypeRewriter.lean  Walker.lean
physlean-extract/output/: catalog.json
prover/: PhysicsGenerator.lean  lake-manifest.json  lakefile.lean
prover/.claude/cache/agents/kraken/: output-20260130.md
prover/.claude/cache/agents/oracle/: output-20260130-crate-versions.md
prover/PhysicsGenerator/: Basic.lean
prover/PhysicsGenerator/Axioms/: Dimensions.lean  Electromagnetism.lean  GeneralRelativity.lean  Mechanics.lean  QuantumMechanics.lean  SpecialRelativity.lean  Thermodynamics.lean
prover/PhysicsGenerator/Bridge/: Types.lean  Verify.lean
prover/PhysicsGenerator/Derived/: AutoRestEnergy.lean  EnergyMomentum.lean  RestEnergy.lean
