[package]
name = "physics-api"
version.workspace = true
edition.workspace = true

[dependencies]
physics-core = { path = "../core" }
physics-rocks = { path = "../rocks" }
physics-pg = { path = "../pg" }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
