[package]
name = "physics-api"
version.workspace = true
edition.workspace = true

[dependencies]
nasrudin-core = { path = "../core" }
nasrudin-rocks = { path = "../rocks" }
nasrudin-pg = { path = "../pg" }
nasrudin-ga = { path = "../ga" }
nasrudin-derive = { path = "../derive" }
nasrudin-lean-bridge = { path = "../lean-bridge" }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
