[package]
name = "nasrudin-derive"
version.workspace = true
edition.workspace = true

[dependencies]
nasrudin-core = { path = "../core" }
nasrudin-rocks = { path = "../rocks" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
nasrudin-lean-bridge = { path = "../lean-bridge" }
