[package]
name = "physics-importer"
version.workspace = true
edition.workspace = true

[dependencies]
nasrudin-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "generate_lean"
path = "src/bin/generate_lean.rs"
