[package]
name = "nasrudin-lean-bridge"
version.workspace = true
edition.workspace = true

[features]
default = []
lean-ffi = []

[dependencies]
nasrudin-core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
