[package]
name = "nasrudin-rocks"
version.workspace = true
edition.workspace = true

[dependencies]
nasrudin-core = { path = "../core" }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
